@@ -76,8 +76,8 @@ public class IncomingUserMessageReceiptHandler implements IncomingMessageHandler
 
     @Transactional
     @Override
-    @Timer(value = "INCOMING_USER_MESSAGE_RECEIPT")
-    @Counter(value = "INCOMING_USER_MESSAGE_RECEIPT")
+    @Timer(clazz = IncomingUserMessageReceiptHandler.class,value = "incoming_user_message_receipt")
+    @Counter(clazz = IncomingUserMessageReceiptHandler.class,value = "incoming_user_message_receipt")
     public SOAPMessage processMessage(SOAPMessage request, Messaging messaging) {
         LOG.debug("Processing UserMessage receipt");
         final SOAPMessage soapMessage = handleUserMessageReceipt(request, messaging);
